# Clientside-Dynamic

./: .gitignore  CMakeLists.txt  README.md
include/: Hello.h  Index.h  URLMap.h  Users.h  arguments.h  globals.h
sql/: data.sql  schema.sql
src/: main.cpp
src/routes/: Hello.cpp  Index.cpp  Users.cpp  globals.cpp
templates/: Index.html
tests/: CMakeLists.txt  easy_test.cpp
var/: database.sqlite3
web/css/: style.css  style.css.map
web/scss/: style.scss
web/templates/: hello.html  index.html  user.html
